fix items alignment

--- a/src/style.css
+++ b/src/style.css
@@ -199,7 +199,7 @@
       justify-content: center;
 
       .nav__list {
-        justify-content: flex-start;
+        justify-content: center;
       }
     }
 
